
    Fixes:
    
    - build script versioning sanity

      * ./build bump release => alters minor AC_INIT release (3rd
                                digit). Still need to hand edit major,
                                minor

      * ./build bump         => alters package sub-release

    - bedrock.spec.in - bedrock-openbedrock package

    - target-repo - added YRB_BUCKET_PERMISSION

-----------------------------------------------------------------------
bedrock 3.0.1

    Enhancements:

    - BLM::IndexedTableHandler

      * get() - throws exception if field arg is not a column in table

      * use environment variables first for various values from
       `tagx.xml` (e.g. BEDROCK_PEBBLE_DIR)

      * reset(1)

        reset() method now accepts optional flag that indicates the
        method should delete the columns from the object instead of
        set them to undef.

      * insert()

        new method that will insert only the columns that are
        explicitly set in the same manner that update only updates
        fields that are set.

      * as_ref() - synonym for asref()

      * select() - without any arguments returns entire table as a
        BLM::IndexedRecordHandler::Recordset

      * html_form_body_with_class() - adds class, id attributes based
        on class name

      * max_id() - return the highest value id
 
    - new unit tests - nn-indexedtablehander.t

    - Bedrock::Model
      Bedrock::Model::Migration
      Bedrock::Model::Field
      Bedrock::Model::Role
      Bedrock::Model::Serializer::MySQL
      bedrock-model.pl
      
      Attempt at creating a way to encapsulate the database model in
      the classes that implement MySQL table handlers...this is WIP.
      
    Fixes:

-----------------------------------------------------------------------
bedrock 3.0.0

    Enhancements:

    - Experimental log spooling using Redis: Bedrock traditionally
      created a log for each page it parsed.  As of 2.4.2.01, Bedrock