@@ -103,15 +103,19 @@ sub new {
 
 sub _set {
   my $self = shift;
-  my ($f, $v) = @_;
 
   my $model = $self->_model_def;
 
-  if ( exists $model->{$f}->{set} ) {
-    $self->{$f} = $model->{$f}->{set}->($f, $v);
-  }
-  else {
-    $self->SUPER::_set(@_);
+  while( @_ ) {
+    my $f = shift;
+    my $v = shift;
+
+    if ( exists $model->{$f}->{set} ) {
+      $self->{$f} = $model->{$f}->{set}->($f, $v);
+    }
+    else {
+      $self->SUPER::_set($f, $v);
+    }
   }
 }
 
@@ -127,7 +131,7 @@ sub _get {
     $model->{$f}->{get}->($f, $v);
   }
   else {
-    $self->SUPER::_get($f, @_);
+    $self->SUPER::_get($f);
   }
 }
 
