@@ -23,6 +23,9 @@ bedrock 3.0.2
 
     - target-repo - added YRB_BUCKET_PERMISSION
 
+    - Bedrock::Model::Handler::_set() should accept list of key/value
+      pairs
+
 -----------------------------------------------------------------------
 bedrock 3.0.1
 
